---
title: 数据库E-R图
---
erDiagram
    User ||--o{ Product : "发布"
    User ||--o{ Address : "拥有"
    User ||--o{ Cart : "拥有"
    User ||--o{ Favorite : "拥有"
    User ||--o{ Order : "下单"
    User ||--o{ Message : "收发"
    User ||--o{ Notification : "接收"
    Category ||--o{ Product : "包含"
    Product ||--o{ ProductImage : "包含"
    Product ||--o{ Cart : "加入"
    Product ||--o{ Favorite : "收藏"
    Order ||--o{ OrderLog : "记录"
    Order ||--o{ Review : "评价"

    User {
        int user_id PK
        varchar username
        varchar password_hash
        varchar email
        varchar phone
        varchar role
        tinyint status
    }

    Category {
        int category_id PK
        varchar name
        int parent_id
        tinyint level
    }

    Product {
        int product_id PK
        int user_id FK
        int category_id FK
        varchar title
        decimal price
        text description
        varchar status
        int stock
    }

    ProductImage {
        int image_id PK
        int product_id FK
        varchar url
        int sort_order
    }

    Address {
        int address_id PK
        int user_id FK
        varchar receiver
        varchar phone
        varchar province
        varchar city
    }

    Order {
        int order_id PK
        varchar order_no
        int buyer_id FK
        int seller_id FK
        varchar status
        decimal total
    }

    OrderLog {
        int log_id PK
        int order_id FK
        varchar from_status
        varchar to_status
    }

    Cart {
        int cart_id PK
        int user_id FK
        int product_id FK
        int quantity
    }

    Favorite {
        int fav_id PK
        int user_id FK
        int product_id FK
    }

    Message {
        int msg_id PK
        int from_user_id FK
        int to_user_id FK
        text content
        varchar type
        tinyint is_read
    }

    Notification {
        int notif_id PK
        int user_id FK
        varchar title
        text content
        varchar type
    }

    Review {
        int review_id PK
        int order_id FK
        int from_user_id
        int rating
        text content
    }
